# SalesSim

./: CONTRIBUTING.md  README.md  example_run_config.yaml  pyproject.toml  setup.py
common/: ai_client.py
data/products/: laptops.json
salessim/: evaluate.py  scenarios.yaml  simulate.py  simulation_utils.py
salessim/agents/ai_customer/: ai_customer.py  laptop_personas.jsonl  utils.py
salessim/agents/sales_agent/: lookup_buying_guide.py  lookup_product.py  prompts.py  sales_agent.py
salessim/services/: constants.py  http_clients.py  sales_service.py  service_manager.py
usersimeval/: __init__.py  cli.py  convert_rollouts_to_txt.py  example-dialogues.json  model_grader.py  rollout_viewer.html  utils.py  visualization_server.py
usersimeval/sales/: grader_prompts.py
